kubernetes/media/lidarr-kids/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr-kids
  namespace: media
  labels:
    app.kubernetes.io/name: lidarr-kids
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr-kids
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr-kids
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 568
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lidarr-kids
          image: ghcr.io/linuxserver/lidarr:3.1.0.4875-ls30
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              memory: 1536Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-kids-config
        - name: media
          persistentVolumeClaim:
            claimName: media-library
